better way to name files

--- a/HDDM/GoodSelf_stim_hddm.ipynb
+++ b/HDDM/GoodSelf_stim_hddm.ipynb
@@ -78,10 +78,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['df1a', 'df1b', 'df3b']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import glob\n",
-    "file_list = glob.glob(\"*hddm_stim.csv\") # get all the file name of input"
+    "file_list = glob.glob(\"*hddm_stim.csv\") # get all the file name of input\n",
+    "db_list = glob.glob(\"*ddm.db\")          # get the existing database of models\n",
+    "\n",
+    "# get the experiments that already sampled\n",
+    "db_names = []\n",
+    "for ii in range(0,3):\n",
+    "    #print(ii)\n",
+    "    db_names.append(db_list[ii].split('_')[0])\n",
+    "db_names"
    ]
   },
   {
@@ -93,8 +112,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current processing: df1a (2 by 2 design)\n",
-      " [-----------------48%                  ] 4862 of 10000 complete in 1100.2 sec"
+      "df1a had been processed\n",
+      "\n",
+      "df1b had been processed\n",
+      "\n",
+      "df3b had been processed\n",
+      "\n",
+      "current processing: df4a (three-way design)\n",
+      " [---------        24%                  ] 2411 of 10000 complete in 5324.5 sec"
      ]
     }
    ],
@@ -106,9 +131,15 @@
     "    exp_name = file_name.split('.')[0]          # get the experiment ID\n",
     "    curr_df = hddm.load_csv(file_name)           # load the data\n",
     "    curr_dbname = exp_name + \"_corr_\" + '_ddm'  # file name for the saving the database\n",
+    "    curr_param_name = exp_name + '_hddm_params.csv'  # file name for saving the parameters\n",
+    "    \n",
     "    \n",
     "    # sampling\n",
-    "    if exp_name in ['df1a', 'df1b','df5']:      # for exp 1a, 1b, and 5\n",
+    "    if exp_name in db_names:     # if this experiment already modeled\n",
+    "        print(exp_name + ' had been processed\\n')\n",
+    "        continue\n",
+    "    \n",
+    "    elif exp_name in ['df1a', 'df1b','df5']:      # for exp 1a, 1b, and 5\n",
     "        print('current processing: '+ exp_name+ ' (2 by 2 design)')  # print the processing info\n",
     "        start_time = time.time()  # the start time of the processing\n",
     "        curr_M = hddm.HDDMStimCoding(curr_df, \n",
@@ -126,7 +157,7 @@
     "        m1_time = time.time() # the time when the script runs to here\n",
     "        \n",
     "    else:\n",
-    "        print('current processing: '+ exp_name+ ' (2 by 2 design)')\n",
+    "        print('current processing: '+ exp_name + ' (three-way design)')\n",
     "        start_time = time.time()  # the start time of the processing\n",
     "        curr_M = hddm.HDDMStimCoding(curr_df, \n",
     "                                    include='z', \n",
@@ -145,15 +176,16 @@
     "    # save the model\n",
     "    curr_M.save(curr_dbname)\n",
     "\n",
-    "    print(\"Running M1 used: %f seconds\" % (m1_time - start_time))\n",
+    "    print(\"\\nRunning Model of \" + exp_name + \" used: %f seconds.\" % (m1_time - start_time))\n",
     "\n",
     "    ## print DIC\n",
-    "    print(\"current model DIC: %f\" % curr_M.dic)  #\n",
-    "    \n",
+    "    print(\"current model DIC: %f\\n\" % curr_M.dic)  #\n",
+    "     \n",
     "    # get the individual node\n",
     "    subj_Data = curr_M.get_subj_nodes()\n",
     "    #subj_Data.head()\n",
-    "    subj_Data.to_csv(r'exp1a_hddm_params.csv')"
+    "    subj_Data.to_csv(curr_param_name)\n",
+    "    "
    ]
   },
   {
