--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -3310,7 +3310,7 @@ For the behavioral task part, we derived different indices. First, we used the m
 
 The DDM analyses were finished by HDDM, as reported in Hu et al., (2019: https://psyarxiv.com/9fczh/). That is, we used the reponse code approach, matched response were coded as 1 and mismatched responses were coded as 0. To fully explore all parameters, we allow all four parameters of DDM free to vary. We then extracted the estimation of all the four parameters for each participants for the correlation analyses.
 
-For the questinnaire part, we are most interested in the self-rated distance between different person. Other questionnaire were not intended to correlated with behavioral data, but we explored the results that might be theoretically interest, e.g., self-esteem, moral identity.
+For the questinnaire part, we are most interested in the self-rated distance between different person and self-evaluation related questionnaires (e.g., moral-self identity, self-esteem etc.). Other questionnaires were not planned to correlated with behavioral data, but we explored the results that might be theoretically interest, e.g., self-esteem, moral identity.
 
 ```{r prepare correlational data,}
 library(mosaic) # using this library for its derivedFactor function
@@ -3343,14 +3343,15 @@ df.scales.v <- df.scales %>% dplyr::filter(subjID %in% subj.common) %>%
 dataList <- list(df1a.v, df1b.v, df4a.v, df4b.v, df5.v, df6b_d1.v, df7a_m.v, df7b_m.V, df3b.v)
 hddmNameList <- c('df1a.v', 'df1b.v', 'df4a.v', 'df4b.v', 'df5.v', 'df6b_d1.v', 'df7a_m.v', 'df7b_m.V', 'df3b.v')
 for (indx in 1:length(unique(df.scales.v$expID))) {
+#for (dfname in hddmNameList){
   current.df <- dataList[[indx]]
   if ('Resp' %in% colnames(current.df)){
     current.df <- current.df %>% dplyr::rename(RESP = Resp)
   }
   current.name <- paste(hddmNameList[indx],'.hddm_stim.csv', sep = '')
   if (indx == 1 | indx == 2){                                           # for exp 1a and 1b, 2*3 design
-    cur.df.hddm_stim <- current.df %>%
-      dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+      cur.df.hddm_stim <- current.df %>%
+      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
       dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
       dplyr::mutate(RT = RT/1000,
                     stim = ifelse(Matchness == "Match", 1, 0),          
@@ -3358,9 +3359,9 @@ for (indx in 1:length(unique(df.scales.v$expID))) {
       dplyr::select(Subject, Matchness, Valence, stim, response, RT) %>%           # select columns
       dplyr::rename(subj_idx = Subject, match = Matchness, val = Valence, rt = RT) # rename columns
   } else if (indx == 5){    # exp5                                      # for exp 5, only select morality task
-    cur.df.hddm_stim <- current.df %>%
+      cur.df.hddm_stim <- current.df %>%
       dplyr::filter(taskType == 'Morality') %>%
-      dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
       dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
       dplyr::mutate(RT = RT/1000,
                     stim = ifelse(Matchness == "Match", 1, 0),          
@@ -3368,9 +3369,11 @@ for (indx in 1:length(unique(df.scales.v$expID))) {
       dplyr::select(Subject, Matchness, Valence, stim, response, RT) %>%           # select columns
       dplyr::rename(subj_idx = Subject, match = Matchness, val = Valence, rt = RT) # rename columns
     
-  } else if (indx %in% c(3, 4, 6, 7, 8, 9)){    # for expa4a, 4b, 6b, 7a, 7b, 3b,  three-way design,
-    cur.df.hddm_stim <- current.df %>%
-      dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+  } 
+    else if (indx %in% c(3, 4, 6, 7, 9))                               # for expa4a, 4b, 6b, 7a, 3b,  three-way design,
+      {
+      cur.df.hddm_stim <- current.df %>%
+      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
       dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
       dplyr::mutate(RT = RT/1000,
                     stim = ifelse(Matchness == "Match", 1, 0),          
@@ -3378,23 +3381,48 @@ for (indx in 1:length(unique(df.scales.v$expID))) {
       dplyr::select(Subject, Matchness, Identity,Valence, stim, response, RT) %>%           # select columns
       dplyr::rename(subj_idx = Subject, match = Matchness, id = Identity, val = Valence, rt = RT) # rename columns
   } 
+    else if (indx == 8)
+    {                                                                   # for exp7b,  three-way design, the RT already in seconds
+      cur.df.hddm_stim <- current.df %>%
+      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
+      dplyr::mutate(stim = ifelse(Matchness == "Match", 1, 0),          
+                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+      dplyr::select(Subject, Matchness, Identity,Valence, stim, response, RT) %>%           # select columns
+      dplyr::rename(subj_idx = Subject, match = Matchness, id = Identity, val = Valence, rt = RT) # rename columns
+  } 
  write.csv(cur.df.hddm_stim, file = paste(curDir,'/HDDM/', current.name, sep = ''), row.names = F) 
 }
 
-# This data is for stim-coding. for both stimuli and resposne: match stim and button press for match is 1; for mismatch is 0;
-df1a.v.hddm_stim <- df1a.v %>%
-  dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
-  dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
-  dplyr::mutate(RT = RT/1000,
-                stim = ifelse(Matchness == "Match", 1, 0),          
-                response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
-  dplyr::select(Subject, Matchness, Valence, stim, response, RT) %>%           # select columns
-  dplyr::rename(subj_idx = Subject, match = Matchness, val = Valence, rt = RT) # rename columns
-
-# write csv for the HDDM analyses
-write.csv(df1a.v.hddm_stim, file = paste(curDir,'/HDDM/df1a.v.hddm_stim.csv', sep = ''), row.names = F)
 
 # get the parameters from hddm
+## read all the file name.
+params.list <- list.files('.\\HDDM\\', pattern = '*_hddm_params.csv')
+params.expname <- data.frame(params.list) %>%
+  tidyr::separate(params.list, c('expName','B','C'),sep = '_') %>%
+  dplyr::select(expName) %>%
+  dplyr::pull()
+
+for (indx in 1:length(params.list)){
+  df.params.tmp <- read.csv(paste('.\\HDDM\\', params.list[indx], sep = ''), header = TRUE, sep = ",",
+                 stringsAsFactors=FALSE,na.strings=c("","NA"))
+  if (params.expname[indx] %in% c('df1a', 'df1b','df5')){
+    print(params.list[indx])
+    df.params.tmp <- df.params.tmp %>%
+      dplyr::mutate(ExpID = params.expname[indx]) %>%
+      dplyr::rename_("Subject" = "subj_idx", "Matchness" = "match", "Valence" = "val") %>%
+      dplyr::select(ExpID, Subject, Matchness, id, Valence, knode_name, mean) %>%
+      tidyr::drop_na() %>%
+      tidyr::separate(knode_name, into = paste('v', 1:2, sep= '')) %>%
+      dplyr::rename(param = v1)  %>% dplyr::filter(Matchness=='Match') %>% dplyr::select(- c(v2, Matchness)) %>%
+      tidyr::pivot_wider(., names_from = c('id','Valence', 'param'), values_from = 'mean')
+
+  }
+  
+  Sys.sleep(0.01)
+  flush.console()
+}
+
 df1a.v.hddm_params <- read.csv(".\\HDDM\\exp1a_hddm_params.csv",header = TRUE, sep = ",",
                  stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
   dplyr::rename(Subject = subj_idx, Matchness = match, Valence = val) %>%
