--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -3340,60 +3340,61 @@ df.scales.v <- df.scales %>% dplyr::filter(subjID %in% subj.common) %>%
 
 ### Prepare the data for hddm
 #expNameList <- unique(df.scales.v$expID)
-dataList <- list(df1a.v, df1b.v, df4a.v, df4b.v, df5.v, df6b_d1.v, df7a_m.v, df7b_m.V, df3b.v)
-hddmNameList <- c('df1a.v', 'df1b.v', 'df4a.v', 'df4b.v', 'df5.v', 'df6b_d1.v', 'df7a_m.v', 'df7b_m.V', 'df3b.v')
-for (indx in 1:length(unique(df.scales.v$expID))) {
-#for (dfname in hddmNameList){
-  current.df <- dataList[[indx]]
-  if ('Resp' %in% colnames(current.df)){
-    current.df <- current.df %>% dplyr::rename(RESP = Resp)
-  }
-  current.name <- paste(hddmNameList[indx],'.hddm_stim.csv', sep = '')
-  if (indx == 1 | indx == 2){                                           # for exp 1a and 1b, 2*3 design
-      cur.df.hddm_stim <- current.df %>%
-      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
-      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
-      dplyr::mutate(RT = RT/1000,
-                    stim = ifelse(Matchness == "Match", 1, 0),          
-                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
-      dplyr::select(Subject, Matchness, Valence, stim, response, RT) %>%           # select columns
-      dplyr::rename(subj_idx = Subject, match = Matchness, val = Valence, rt = RT) # rename columns
-  } else if (indx == 5){    # exp5                                      # for exp 5, only select morality task
-      cur.df.hddm_stim <- current.df %>%
-      dplyr::filter(taskType == 'Morality') %>%
-      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
-      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
-      dplyr::mutate(RT = RT/1000,
-                    stim = ifelse(Matchness == "Match", 1, 0),          
-                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
-      dplyr::select(Subject, Matchness, Valence, stim, response, RT) %>%           # select columns
-      dplyr::rename(subj_idx = Subject, match = Matchness, val = Valence, rt = RT) # rename columns
-    
-  } 
-    else if (indx %in% c(3, 4, 6, 7, 9))                               # for expa4a, 4b, 6b, 7a, 3b,  three-way design,
-      {
-      cur.df.hddm_stim <- current.df %>%
-      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
-      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
-      dplyr::mutate(RT = RT/1000,
-                    stim = ifelse(Matchness == "Match", 1, 0),          
-                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
-      dplyr::select(Subject, Matchness, Identity,Valence, stim, response, RT) %>%           # select columns
-      dplyr::rename(subj_idx = Subject, match = Matchness, id = Identity, val = Valence, rt = RT) # rename columns
-  } 
-    else if (indx == 8)
-    {                                                                   # for exp7b,  three-way design, the RT already in seconds
-      cur.df.hddm_stim <- current.df %>%
-      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
-      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
-      dplyr::mutate(stim = ifelse(Matchness == "Match", 1, 0),          
-                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
-      dplyr::select(Subject, Matchness, Identity,Valence, stim, response, RT) %>%           # select columns
-      dplyr::rename(subj_idx = Subject, match = Matchness, id = Identity, val = Valence, rt = RT) # rename columns
-  } 
- write.csv(cur.df.hddm_stim, file = paste(curDir,'/HDDM/', current.name, sep = ''), row.names = F) 
-}
+#dataList <- list(df1a.v, df1b.v, df4a.v, df4b.v, df5.v, df6b_d1.v, df7a_m.v, df7b_m.V, df3b.v)
+#hddmNameList <- c('df1a.v', 'df1b.v', 'df4a.v', 'df4b.v', 'df5.v', 'df6b_d1.v', 'df7a_m.v', 'df7b_m.V', 'df3b.v')
+#for (indx in 1:length(unique(df.scales.v$expID))) {
+##for (dfname in hddmNameList){
+#  current.df <- dataList[[indx]]
+#  if ('Resp' %in% colnames(current.df)){
+#    current.df <- current.df %>% dplyr::rename(RESP = Resp)
+#  }
+#  current.name <- paste(hddmNameList[indx],'.hddm_stim.csv', sep = '')
+#  if (indx == 1 | indx == 2){                                           # for exp 1a and 1b, 2*3 design
+#      cur.df.hddm_stim <- current.df %>%
+#      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+#      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
+#      dplyr::mutate(RT = RT/1000,
+#                    stim = ifelse(Matchness == "Match", 1, 0),          
+#                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+#      dplyr::select(Subject, Matchness, Valence, stim, response, RT) %>%           # select columns
+#      dplyr::rename(subj_idx = Subject, match = Matchness, val = Valence, rt = RT) # rename columns
+#  } else if (indx == 5){    # exp5                                      # for exp 5, only select morality task
+#      cur.df.hddm_stim <- current.df %>%
+#      dplyr::filter(taskType == 'Morality') %>%
+#      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+#      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
+#      dplyr::mutate(RT = RT/1000,
+#                    stim = ifelse(Matchness == "Match", 1, 0),          
+#                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+#      dplyr::select(Subject, Matchness, Valence, stim, response, RT) %>%           # select columns
+#      dplyr::rename(subj_idx = Subject, match = Matchness, val = Valence, rt = RT) # rename columns
+#    
+#  } 
+#    else if (indx %in% c(3, 4, 6, 7, 9))                               # for expa4a, 4b, 6b, 7a, 3b,  three-way design,
+#      {
+#      cur.df.hddm_stim <- current.df %>%
+#      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+#      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
+#      dplyr::mutate(RT = RT/1000,
+#                    stim = ifelse(Matchness == "Match", 1, 0),          
+#                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+#      dplyr::select(Subject, Matchness, Identity,Valence, stim, response, RT) %>%           # select columns
+#      dplyr::rename(subj_idx = Subject, match = Matchness, id = Identity, val = Valence, rt = RT) # rename columns
+#  } 
+#    else if (indx == 8)
+#    {                                                                   # for exp7b,  three-way design, the RT already in seconds
+#      cur.df.hddm_stim <- current.df %>%
+#      #dplyr::filter(Subject %in% subj.common) %>%                       # only participants with Questionnaire data
+#      dplyr::filter(!is.na(RESP)) %>%                                   # exclude trials without response or with wrong keys
+#      dplyr::mutate(stim = ifelse(Matchness == "Match", 1, 0),          
+#                    response = ifelse((Matchness == "Match" & ACC ==1) | (Matchness == "Mismatch" & ACC ==0), 1, 0)) %>%
+#      dplyr::select(Subject, Matchness, Identity,Valence, stim, response, RT) %>%           # select columns
+#      dplyr::rename(subj_idx = Subject, match = Matchness, id = Identity, val = Valence, rt = RT) # rename columns
+#  } 
+# write.csv(cur.df.hddm_stim, file = paste(curDir,'/HDDM/', current.name, sep = ''), row.names = F) 
+#}
 
+# rm(dataList)
 
 # get the parameters from hddm
 ## read all the file name.
@@ -3404,8 +3405,19 @@ params.expname <- data.frame(params.list) %>%
   dplyr::pull()
 
 for (indx in 1:length(params.list)){
+  
   df.params.tmp <- read.csv(paste('.\\HDDM\\', params.list[indx], sep = ''), header = TRUE, sep = ",",
-                 stringsAsFactors=FALSE,na.strings=c("","NA"))
+                 stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
+    #tidyr::separate(X, into = c("X", "subjects"), sep = '[)]') %>%
+    #tidyr::separate(X, into = c("paramName", "Condition"), sep = '[(]')
+    dplyr::select(subj_idx, match, id, val, knode_name, mean:map) %>%
+    tidyr::separate(knode_name, into = c('param_Name', 'postfix')) %>%
+    dplyr::filter(!is.na(mean))  %>%
+    tidyr::pivot_wider(id_cols = subj_idx, names_from = c(match, id, val, param_Name), values_from = mean) %>%
+    mutate(subj_idx = as.numeric(subj_idx)) %>%
+    dplyr::filter(subj_idx %in% subj.common)
+    
+  
   if (params.expname[indx] %in% c('df1a', 'df1b','df5')){
     print(params.list[indx])
     df.params.tmp <- df.params.tmp %>%
